welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: value || is not a member of Unit
  return (ado(a) || ado(b)) && !(ado(a) && ado(b))
                 ^loneTeen:2: error: value && is not a member of Unit
  return (ado(a) || ado(b)) && !(ado(a) && ado(b))
                                        ^loneTeen:5: warning: enclosing method ado has result type Unit: return value discarded
  return (13 <= a && a <= 19)
  ^